* .htaccess: new file. * config: CGI URL is .../view/.
git-svn-id: http://jp.rubyist.net/svn/rurema/doctree/trunk@237 018432c1-2f1c-0410-ba7c-d424024924b7

--- a/refm/api/config
+++ b/refm/api/config
@@ -13,7 +13,7 @@ def bitclust_context
   db = BitClust::Database.new("#{vardir}/1.9.0")
   manager = BitClust::ScreenManager.new(
     :base_url    => baseurl,
-    :cgi_url     => "#{baseurl}/#{File.basename($0)}",
+    :cgi_url     => "#{baseurl}/view",
     :templatedir => "#{srcdir}/template"
   )
   BitClust::RequestHandler.new(db, manager)
