add CGI configuration
git-svn-id: http://jp.rubyist.net/svn/rurema/doctree/trunk@501 018432c1-2f1c-0410-ba7c-d424024924b7

--- a/refm/api/.htaccess
+++ b/refm/api/.htaccess
@@ -1,10 +1,11 @@
 Options +ExecCGI -MultiViews
 AddHandler cgi-script .cgi
+RewriteEngine on
 
 DirectoryIndex view.cgi/library/
-
-RewriteEngine on
 RewriteRule ^.*view(/.*$) view.cgi$1
+#DirectoryIndex view.fcgi/library/
+#RewriteRule ^.*view(/.*$) view.fcgi$1
 
 <Files config>
     deny from all
